# QBWebUIHelper

./: .gitattributes  .gitignore  README.md  buildme.bat  buildme.sh  package-lock.json  package.json
.github/: copilot-instructions.md
Doc/: dev_helper.md  regkey_sample.txt
GoApp (OldStuff)/: go.mod  main.go  platform_other.go  platform_windows.go  test.js  torrent.go
plans/: tauri-port-plan.md
scripts/: stamp.ps1
src/: about.html  index.html  settings.html
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: associations.rs  config.rs  lib.rs  main.rs
